--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,8 @@ author:
   name             : "Adib Wahid Quader"
   pronouns         : # example: "she/her"  
   bio              : "Machine Learning and Data Science Enthusiast"
-  location         : "Earth"
-  employer         : "Chittagong, Bangladesh"
+  location         : "Chittagong, Bangladesh"
+  employer         : "International Islamic University Chittagong"
   uri              : # URL
   email            : "adibwahidcse@gmail.com" 
 
