--- a/_config.yml
+++ b/_config.yml
@@ -179,13 +179,12 @@ markdown_ext: "markdown,mkdown,mkdn,mkd,md"
 
 
 # Conversion
-markdown: kramdown
+markdown: GFM #kramdown
 highlighter: rouge
 lsi: false
 excerpt_separator: "\n\n"
 incremental: false
 
-markdown: GFM
 # Markdown Processing
 kramdown:
   input: GFM
