--- a/_config.yml
+++ b/_config.yml
@@ -179,7 +179,7 @@ markdown_ext: "markdown,mkdown,mkdn,mkd,md"
 
 
 # Conversion
-markdown: GFM #kramdown
+markdown: kramdown #GFM 
 highlighter: rouge
 lsi: false
 excerpt_separator: "\n\n"
