--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,11 +6,14 @@ main:
   # - title: "Talks"
   #   url: /talks/    
 
+   - title: "Projects"
+    url: /projects/
+
   - title: "Teaching"
     url: /teaching/    
     
-  - title: "Projects"
-    url: /portfolio/
+  # - title: "Projects"
+  #   url: /portfolio/
         
   # - title: "Blog Posts"
   #   url: /year-archive/
