--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,10 +4,10 @@ main:
     url: /publications/
 
   # - title: "Talks"
-  #   url: /talks/    
-
-   # - title: "Projects"
-   #  url: /projects/
+  #   url: /talks/ 
+  
+  - title: "Projects"
+    url: /projects/ 
 
   - title: "Teaching"
     url: /teaching/    
