--- a/_config.yml
+++ b/_config.yml
@@ -287,7 +287,7 @@ defaults:
       path: ""
       type: organizations
     values:
-      layout: single
+      layout: organizations
       author_profile: true
       share: true
 
