--- a/_config.yml
+++ b/_config.yml
@@ -282,6 +282,7 @@ defaults:
       layout: single
       author_profile: true
       share: true
+      comments: true
   # _organizations
   - scope:
       path: ""
@@ -290,6 +291,7 @@ defaults:
       layout: organizations
       author_profile: true
       share: true
+      comments: true
 
 
 # Sass/SCSS
