--- a/_config.yml
+++ b/_config.yml
@@ -288,7 +288,7 @@ defaults:
       path: ""
       type: organizations
     values:
-      layout: organizations
+      layout: teaching
       author_profile: true
       share: true
       comments: true
