--- a/_config.yml
+++ b/_config.yml
@@ -215,9 +215,7 @@ collections:
   projects:
     output: true
     permalink: /:collection/:path/
-  organizations:
-    output: true
-    permalink: /:collection/:path/
+
 
 # Defaults
 defaults:
@@ -284,14 +282,14 @@ defaults:
       share: true
       comments: true
   # _organizations
-  - scope:
-      path: ""
-      type: organizations
-    values:
-      layout: single
-      author_profile: true
-      share: true
-      comments: true
+  # - scope:
+  #     path: ""
+  #     type: organizations
+  #   values:
+  #     layout: single
+  #     author_profile: true
+  #     share: true
+  #     comments: true
 
 
 # Sass/SCSS
