--- a/_config.yml
+++ b/_config.yml
@@ -215,7 +215,9 @@ collections:
   projects:
     output: true
     permalink: /:collection/:path/
-
+  organizations:
+    output: true
+    permalink: /:collection/:path/
 
 # Defaults
 defaults:
@@ -281,7 +283,15 @@ defaults:
       author_profile: true
       share: true
       comments: true
-
+  # _organizations
+  - scope:
+      path: ""
+      type: organizations
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comments: true
 
 # Sass/SCSS
 sass:
