--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "Profile.png"
   name             : "Adib Wahid Quader"
   pronouns         : # example: "she/her"  
-  bio              : "Machine Learning and Data Science Enthusiast"
+  bio              : "Natural Language Processing, ML & Data Science Enthusiast"
   location         : "Chittagong, Bangladesh"
   employer         : "International Islamic University Chittagong"
   uri              : # URL
