--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : https://github.com/Aveiro11
+  github           : github.com/Aveiro11
   kaggle           : "https://www.kaggle.com/adibquader"  
   stackoverflow    : "Aveiro11"   
 
