--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ author:
   codepen          : # Username
   dribbble         : # Username
   github           : github.com/Aveiro11
-  kaggle           : "https://www.kaggle.com/adibquader"  
+  kaggle           : "/adibquader"  
   stackoverflow    : "Aveiro11"   
 
   # Social media
