--- a/_config.yml
+++ b/_config.yml
@@ -43,8 +43,8 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : github.com/Aveiro11
-  kaggle           : "/adibquader"  
+  github           : "Aveiro11"
+  kaggle           : "adibquader"  
   stackoverflow    : "Aveiro11"   
 
   # Social media
