--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,8 @@ author:
   name             : "Adib Wahid Quader"
   pronouns         : # example: "she/her"  
   bio              : "Natural Language Processing, ML & Data Science Enthusiast"
-  location         : "Chittagong, Bangladesh"
-  employer         : "International Islamic University Chittagong"
+  location         : "Göteborg, Sweden"
+  employer         : "Göteborgs Universitet"
   uri              : # URL
   email            : "adibwahidcse@gmail.com" 
 
