--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ author:
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?hl=en&user=i1QZrbMAAAAJ"
+  googlescholar    : "https://scholar.google.com/citations?user=enDlaNMAAAAJ&hl=en&oi=ao"
   impactstory      : # URL
   orcid            : #URL
   semantic         : # URL
